Popup position and overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -67,11 +67,14 @@ body, #root {
 }
 
 .player-name button {
-  padding:0.5rem;
+  display:inline-block;
+  padding:0.6rem;
   font-family:"Montserrat", sans-serif; 
   font-size: 1rem;
+  align-items: center;
+  text-align: center;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 
@@ -81,8 +84,10 @@ body, #root {
 }
 
 .popup-content {
-  position: relative;
-  margin-left: 37%;
+  position: fixed;
+  /*margin-left: 37%;*/
+  top:50%;
+  left: 50%;
   width: 400px;
   height: 200px;
   align-items: center;
@@ -91,9 +96,11 @@ body, #root {
   font-family:"Montserrat", sans-serif; 
   text-align: center;
   font-size: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 2px; 
-  transform: scale((0.5));
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 8px; 
+  z-index: 999;
+ /* transform: scale((0.5));*/
+ transform: translate(-50%, -50%);
 }
 
 .popup-content h2 {
@@ -103,15 +110,23 @@ body, #root {
 }
 
 .popup-content button {
+  margin: 10px;
   background-color: #753a88 ;
   color: #fff;
   padding:0.5rem 1rem;
   font-size: 1rem;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index:999;
   cursor: pointer;
-  box-sizing: content-box;
+  box-sizing: border-box;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
+
 
 .popup-content button:hover {
   background-color: #cc2b5e;
@@ -154,9 +169,9 @@ body, #root {
   font-weight: 300;
 }
 
-.Hangman {
+/*.Hangman {
   width: 80%;
-  /* text-align: center; */
+  /* text-align: center; 
   margin: 0 auto;
   min-height: 80vh;
 }
@@ -227,7 +242,7 @@ body, #root {
 .Hangman button:disabled {
   background: #bdbdbd;
   color: #eeeeee;
-  /* box-shadow: 0 6px #9e9e9e; */
+  /* box-shadow: 0 6px #9e9e9e; 
 }
 #reset {
   width: auto;
@@ -259,5 +274,5 @@ body, #root {
   }
   #reset {
     margin: 2rem auto 1rem;
-  }
-}
+  }*/
+
